--- a/plugins/plainpaste.html
+++ b/plugins/plainpaste.html
@@ -8,13 +8,13 @@
 				margin: 0;
 				font:12px/1 "sans serif",tahoma,verdana,helvetica;
 				background-color:#F0F0EE;
-				color:#222222;
+				color:#333;
 				text-align:center;
 			}
 			#textArea {
 				width:98%;
 				height:260px;
-				border:1px solid #222222;
+				border:1px solid #A5A5A5;
 				overflow: auto;
 				resize: none;
 			}
