[trunk] Fixed issue #171

--- a/plugins/advtable/advtable.html
+++ b/plugins/advtable/advtable.html
@@ -184,6 +184,8 @@
 				};
 				KE.util.pluginLang('advtable', document);
 				KE.util.hideLoadingPage(id);
+				rowsBox.focus();
+				rowsBox.select();
 			}, window, document);
 		</script>
 	</head>
