--- a/plugins/link/link.html
+++ b/plugins/link/link.html
@@ -60,6 +60,8 @@
 				}
 				KE.util.pluginLang('link', document);
 				KE.util.hideLoadingPage(id);
+				hyperLink.focus();
+				hyperLink.select();
 			}, window, document);
 		</script>
 	</head>
