--- a/plugins/image/image.html
+++ b/plugins/image/image.html
@@ -191,7 +191,7 @@
 						fileManager = new KE.dialog({
 							id : id,
 							cmd : 'file_manager',
-							file : 'file_manager/file_manager.html?id=' + id + '&ver=' + KE.version,
+							file : 'file_manager/file_manager.html',
 							width : 500,
 							height : 400,
 							loadingMode : true,
