--- a/plugins/advtable/cell.html
+++ b/plugins/advtable/cell.html
@@ -90,25 +90,25 @@
 				var widthType = 'px';
 				var heightType = 'px';
 				var cell = KE.plugin.advtable.getSelectedCell(id);
-				var cellWidth = cell.style.width || cell.width;
-				var cellHeight = cell.style.height || cell.height;
+				var cellWidth = cell.style.width || cell.width || '';
+				var cellHeight = cell.style.height || cell.height || '';
 				var match;
-				if (cellWidth !== undefined && (match = /^(\d+)((?:px|%)*)$/.exec(cellWidth))) {
+				if ((match = /^(\d+)((?:px|%)*)$/.exec(cellWidth))) {
 					width = match[1];
 					widthType = match[2];
 				}
-				if (cellHeight !== undefined && (match = /^(\d+)((?:px|%)*)$/.exec(cellHeight))) {
+				if ((match = /^(\d+)((?:px|%)*)$/.exec(cellHeight))) {
 					height = match[1];
 					heightType = match[2];
 				}
-				textAlign = cell.style.textAlign || '';
-				verticalAlign = cell.style.verticalAlign || '';
-				border = cell.style.borderWidth || '';
+				var textAlign = cell.style.textAlign || '';
+				var verticalAlign = cell.style.verticalAlign || '';
+				var border = cell.style.borderWidth || '';
 				if (border) border = parseInt(border);
-				borderColor = cell.style.borderColor || '';
-				backgroundColor = cell.style.backgroundColor || '';
-				borderColor = KE.util.rgbToHex(borderColor).toUpperCase();
-				backgroundColor = KE.util.rgbToHex(backgroundColor).toUpperCase();
+				var borderColor = cell.style.borderColor || '';
+				var backgroundColor = cell.style.backgroundColor || '';
+				var borderColor = KE.util.rgbToHex(borderColor).toUpperCase();
+				var backgroundColor = KE.util.rgbToHex(backgroundColor).toUpperCase();
 				widthBox.value = width;
 				heightBox.value = height;
 				widthTypeBox.value = widthType;
