[trunk] fixed bug where advtable

--- a/plugins/advtable/advtable.html
+++ b/plugins/advtable/advtable.html
@@ -184,8 +184,13 @@
 				};
 				KE.util.pluginLang('advtable', document);
 				KE.util.hideLoadingPage(id);
-				rowsBox.focus();
-				rowsBox.select();
+				if (mode === 'update') {
+					widthBox.focus();
+					widthBox.select();
+				} else {
+					rowsBox.focus();
+					rowsBox.select();
+				}
 			}, window, document);
 		</script>
 	</head>
