[trunk] modified style

--- a/plugins/image/image.html
+++ b/plugins/image/image.html
@@ -263,7 +263,7 @@
 				<input type="hidden" id="referMethod" name="referMethod" value="" />
 				<input type="hidden" name="imgBorder" value="0" />
 				<ul class="table">
-					<li>
+					<li style="height:30px;">
 						<div id="tab1" style="display:none;">
 							<label for="url" class="ke-inline-block"><span id="lang.remoteUrl"></span></label>&nbsp;
 							<input type="text" id="url" name="url" value="http://" maxlength="255" class="ke-inline-block ke-text-input url" />
