[trunk] Fixed issue #177

--- a/test/main.html
+++ b/test/main.html
@@ -7,6 +7,10 @@
 			body {
 				line-height:18px;
 			}
+			a:hover {
+				text-decoration: underline;
+				background-color: #aaa;
+			}
 		</style>
 		<!-- <script src="https://getfirebug.com/firebug-lite.js"></script> -->
 		<script charset="utf-8" src="../src/core.js"></script>
