[trunk] Fixed issue #178

--- a/test/main.html
+++ b/test/main.html
@@ -34,6 +34,9 @@
 				afterBlur : function(id) {
 					//KE.g[id].iframeDoc.body.style.backgroundColor = '#fff';
 					//KE.g[id].newTextarea.style.backgroundColor = '#fff';
+				},
+				afterDrag : function(id) {
+					//console.log(id);
 				}
 			});
 		</script>
