[trunk] Fixed issue #173

--- a/test/main.html
+++ b/test/main.html
@@ -37,6 +37,9 @@
 				},
 				afterDrag : function(id) {
 					//console.log(id);
+				},
+				afterUpload : function(id, url) {
+					//console.log(url);
 				}
 			});
 		</script>
