[trunk] Fixed bug where cannot remove format in IE9

--- a/test/main.html
+++ b/test/main.html
@@ -21,9 +21,9 @@
 				id : 'content1',
 				skinsPath : '../skins/',
 				pluginsPath : '../plugins/',
-				newlineTag : 'br',
 				allowFileManager : true,
 				useContextmenu : true,
+				syncType : 'auto',
 				afterChange : function(id) {
 					KE.$('content_html').value = KE.$(id).value;
 				},
