[trunk] bugfix: form reset bug

--- a/test/total.html
+++ b/test/total.html
@@ -7,23 +7,7 @@
 	<body>
 		<h1 id="type">KindEditor Test</h1>
 		<form method="post" action="../php/demo.php">
-		<textarea name="editor1" cols="100" rows="20" style="width:800px;height:200px;">
-<table style="width:90%;" border="1" bordercolor="#000000" cellpadding="2" cellspacing="0"><tbody><tr>
-<td>a&nbsp;</td>
-<td>b&nbsp;</td>
-</tr>
-<tr><td>c&nbsp;</td>
-<td>d&nbsp;</td>
-</tr>
-<tr><td>e&nbsp;</td>
-<td>f&nbsp;</td>
-</tr>
-</tbody>
-</table>
-		<img src="data/logo_180_30.gif" />
-		测试内容1<div><a href="#">测试内容1</a><br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1测试内容1</div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div></div>
-		测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div></div><div>测试内容1<div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1测试内容1</div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1<br /></div><div>测试内容1</div></div>
-		</textarea>
+		<textarea name="editor1" cols="100" rows="20" style="width:800px;height:200px;"></textarea>
 		<br />
 		<textarea name="editor2" cols="100" rows="20" style="width:700px;height:100px;"></textarea>
 		<br />
@@ -31,6 +15,7 @@
 		<input type="button" id="create2" value="Create #2" />
 		<input type="button" id="remove1" value="Remove #1" />
 		<input type="button" id="remove2" value="Remove #2" />
+		<input type="reset" name="button" value="Reset" />
 		<script src="../kindeditor.js"></script>
 		<script src="../lang/zh_CN.js"></script>
 		<script src="../lang/en.js"></script>
