--- a/test/total.html
+++ b/test/total.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
 		<title>KindEditor Test</title>
 	</head>
 	<body>
