[trunk] bugfix: issue #259

--- a/test/main.html
+++ b/test/main.html
@@ -55,6 +55,9 @@
 	</head>
 	<body>
 		<h1 id="type">KindEditor Main Test</h1>
+		<table>
+		<tr>
+		<td align="center">
 		<form method="post" action="../php/demo.php">
 			<p><textarea name="content1" cols="100" rows="20" style="width:800px;height:200px;">
 <div style="display:inline-block;"></div>123<div></div><div></div>
@@ -342,6 +345,9 @@ aaaaaaaaaaaaaaaaaaaaaaaaaaaaa
 				});
 			});
 		</script>
+		</td>
+		</tr>
+		</table>
 		<div style="height:1000px;"></div>
 	</body>
 </html>
